bad/2020-07-06/15-28/50.1/build.err
run.c: In function ‘craft’:
run.c:16:6: warning: implicit declaration of function ‘gets’; did you mean ‘fgets’? [-Wimplicit-function-declaration]
      gets(str);
      ^~~~
      fgets
run.c:20:96: error: lvalue required as left operand of assignment
        if(str[i] = 'a' && str[i] = 'e' && str[i] = 'i' && str[i] = 'o'&& str[i] = 'u'&& str[i] = 'y') {
                                                                                                ^
run.c:30:11: warning: ‘return’ with a value, in function returning void
    return 0;
           ^
run.c:10:7: note: declared here
  void craft (char* sox) {
       ^~~~~